--- a/ultralytics/cfg/models/v3/yolov3.yaml
+++ b/ultralytics/cfg/models/v3/yolov3.yaml
@@ -3,6 +3,8 @@
 
 # Parameters
 nc: 80 # number of classes
+ch: 1 # number of channels
+
 depth_multiple: 1.0 # model depth multiple
 width_multiple: 1.0 # layer channel multiple
 
