--- a/ultralytics/cfg/models/v5/yolov5.yaml
+++ b/ultralytics/cfg/models/v5/yolov5.yaml
@@ -3,6 +3,8 @@
 
 # Parameters
 nc: 80 # number of classes
+ch: 1 # number of channels
+
 scales: # model compound scaling constants, i.e. 'model=yolov5n.yaml' will call yolov5.yaml with scale 'n'
   # [depth, width, max_channels]
   n: [0.33, 0.25, 1024]
