--- a/ultralytics/cfg/models/v6/yolov6.yaml
+++ b/ultralytics/cfg/models/v6/yolov6.yaml
@@ -3,6 +3,8 @@
 
 # Parameters
 nc: 80 # number of classes
+ch: 1 # number of channels
+
 activation: nn.ReLU() # (optional) model default activation function
 scales: # model compound scaling constants, i.e. 'model=yolov6n.yaml' will call yolov8.yaml with scale 'n'
   # [depth, width, max_channels]
