--- a/ultralytics/cfg/models/v8/yolov8-pose.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-pose.yaml
@@ -3,6 +3,8 @@
 
 # Parameters
 nc: 1 # number of classes
+ch: 1 # number of channels
+
 kpt_shape: [17, 3] # number of keypoints, number of dims (2 for x,y or 3 for x,y,visible)
 scales: # model compound scaling constants, i.e. 'model=yolov8n-pose.yaml' will call yolov8-pose.yaml with scale 'n'
   # [depth, width, max_channels]
